docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
//  Empty
.header {
  @extend %clearfix;
  z-index: 99;
  position: relative;
}

.header__container {
  @include grid;
  align-items: center;
  flex-wrap: nowrap;
  justify-content: space-between;
  position: relative;

  .header-logo {
    padding-top: .5em;
    padding-bottom: .5em;
    max-width: 225px;
  }

  .toggle-expand {
    margin-left: auto;
  }

  @include breakpoint($bp3) {
    flex-wrap: wrap;

    .header-logo {
      padding-top: 1em;
      padding-bottom: 0;
      max-width: 300px;
      width: 30%;
    }
  }

  @include breakpoint($nav-breakpoint) {
    flex-wrap: nowrap;
  }

  @include breakpoint($bp4) {
    .header-logo {
      max-width: 300px;
      width: 25%;
    }
  }

  @include breakpoint($bp5) {
    .header-logo {
      max-width: 325px;
      width: 30%;
    }
  }
}

.header__right {
  display: flex;

  @include breakpoint($bp3) {
    margin-left: auto;
    width: 100%;
    justify-content: flex-end;
  }

  @include breakpoint($bp4) {
    max-width: 70%;
    width: auto;
    flex-grow: 1;
  }
}

// Search

.header__search-drawer {
  display: none;
  visibility: hidden;
  background-color: $white;
  position: absolute;
  width: 100%;
  top: 100%;
  left: 0;
  right: 0;
  z-index: 20;
  padding: 1em 2em 2em;
  border-top: 1px solid $trust-ltr;
  box-shadow: $shadow;

  .header__search.is-active & {
    display: block;
    visibility: visible;
  }

  @include breakpoint($bp3) {
    top: 0;
    margin-top: 1em;
  }

  @include breakpoint($nav-breakpoint) {
    border-top: 4px solid $growth;
    margin-top: 0;
    width: 69%;
    margin-right: 2em;
    left: auto;
    padding: 1em 2em 2em;
    border-radius: 0 0 $rd-brd-lg $rd-brd-lg;
  }

  @include breakpoint($nav-breakpoint 1070px) {
    top: 74px;
  }

  @include breakpoint(1070px) {
    width: 67%;
  }
}

.header__search-form {
  display: flex;
  align-items: flex-end;
}

.header__search-form__container {
  width: 100%;
  margin-right: .5em;
}

.header__search-input[type="text"] {
  margin-bottom: 0;
}

.search-toggle {
  @include adjust-font-size-to($label, .9);
  border: 0;
  box-shadow: none;
  appearance: none;
  background-color: $white;
  padding: 1.5em 1em;

  svg {
    height: 1.9em;
    width: 1.9em;
    fill: $trust-aa;
  }

  &:active,
  &:hover,
  &:focus {
    outline: none;

    svg {
      fill: $growth;
    }
  }

  @include breakpoint($bp3) {
    position: absolute;
    right: 2em;
    top: 0;
    background-color: $trust-ltst;
    padding: .9em 1.25em .5em 1em;
    z-index: 20;
    border-radius: 0 0 $rd-brd-lg $rd-brd-lg;

    svg {
      height: 1.5em;
      width: 1.5em;
      fill: $primary-dark;
    }

    &:active,
    &:hover,
    &:focus {
      background-color: $trust-aa;

      svg {
        fill: $white;
      }
    }
  }

  @include breakpoint($bp4) {
    padding: .9em 1.25em .5em 1em;
  }
}

// Hidden close buttons at end of nav drawers
// for keyboard users
.close-nav {
  @extend %element-focusable;
  @include button;
  @include button-small;
}

.close-nav--mobile {
  order: 3;

  @include breakpoint($bp3) {
    display: none;
    visibility: hidden;
  }
}

// Utility Menu Styles
.utility {
  order: 2;

  @include breakpoint($bp3) {
    position: absolute;
    top: 0;
    right: 4.5em;
    order: 0;
  }
}

.utility-menu {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

  @include breakpoint($bp3) {
    display: block;
  }
}

.utility-menu__item {
  display: inline-block;

  @include breakpoint(0 899px) {
    order: 2;
  }
}

.utility-menu__link {
  @include adjust-font-size-to($label, .9);
  display: inline-block;
  padding: 1em .5em;
  margin-right: 1em;
  font-weight: 600;

  &:link,
  &:visited {
    color: $primary-dark;
    text-decoration: none;
  }

  &:active,
  &:hover,
  &:focus {
    color: $trust-aa;
    text-decoration: underline;
  }
}

.utility-menu__link--mytower {
  color: transparent;
  background: url('../pattern-lab/public/images/mytowerhealth-logo.svg');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center 90%;
  padding: 1em .5em 0 .5em;

  @include breakpoint(0 899px) {
    position: absolute;
    top: -5px;
    right: 0;
    padding: .5em;
  }

  &:link,
  &:visited {
    color: transparent;
    border-bottom: 1px solid transparent;
  }

  &:active,
  &:hover,
  &:focus {
    border-bottom: 1px solid $trust-aa;
  }
}

.utility-menu__link--cta {
  @extend %track-out;
  font-weight: 600;
  text-transform: uppercase;
  color: white;
  background-color: $primary-dark;
  padding: 1em 1em .75em;

  &:link,
  &:visited {
    color: $white;
  }

  &:active,
  &:hover,
  &:focus {
    background-color: $trust-aa;
    color: $white;
    text-decoration: none;
  }

  @include breakpoint(0 899px) {
    display: block;
    text-align: center;
    width: 100%;
  }

  @include breakpoint($bp3) {
    border-radius: 0 0 $rd-brd-lg $rd-brd-lg;
  }
}

.utility-menu__item--cta {
  @include breakpoint(0 899px) {
    order: 1;
    width: 100%;
  }
}

